first commit in a while